--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "config": "^3.2.5",
-    "express": "^4.17.1"
+    "config": "^3.3.1",
+    "express": "^4.17.1",
+    "joi": "^14.3.1",
+    "joi-objectid": "^3.0.1",
+    "mongoose": "^5.9.7"
   },
   "devDependencies": {
     "jest": "^25.1.0",
