--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
-    "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.7"
   },
   "devDependencies": {
