--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "DhannySark",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.656.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
